Finished, come back for extra credit use cases

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE HTML>
 <html>
     <title>Sean's Calculator</title>
+    <head>Welcome to Sean's Calculator :)</head>
     <body>
+        <p>Do some maths...</p>
         <div class="digits">
             <button class="digit" id="0">0</button>
             <button class="digit" id="1">1</button>
