working on decimals

--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <body>
         <p>Do some maths...</p>
         <div class="digits">
-            <button class="digit" id="0">0</button>
-            <button class="digit" id="1">1</button>
-            <button class="digit" id="2">2</button>
-            <button class="digit" id="3">3</button>
-            <button class="digit" id="4">4</button>
-            <button class="digit" id="5">5</button>
-            <button class="digit" id="6">6</button>
-            <button class="digit" id="7">7</button>
-            <button class="digit" id="8">8</button>
-            <button class="digit" id="9">9</button>
+            <button class="digit" data-key="48" id="0">0</button>
+            <button class="digit" data-key="49" id="1">1</button>
+            <button class="digit" data-key="50" id="2">2</button>
+            <button class="digit" data-key="51" id="3">3</button>
+            <button class="digit" data-key="52" id="4">4</button>
+            <button class="digit" data-key="53" id="5">5</button>
+            <button class="digit" data-key="54" id="6">6</button>
+            <button class="digit" data-key="55" id="7">7</button>
+            <button class="digit" data-key="56" id="8">8</button>
+            <button class="digit" data-key="57" id="9">9</button>
         </div>
         <div class="operators">
             <button class="operator" id="add">+</button>
