have to add keyboard support and make it pretty

--- a/index.html
+++ b/index.html
@@ -15,15 +15,18 @@
             <button class="digit" data-key="55" id="7">7</button>
             <button class="digit" data-key="56" id="8">8</button>
             <button class="digit" data-key="57" id="9">9</button>
+            <button class="digit" data-key="46" id=".">.</button>
         </div>
         <div class="operators">
             <button class="operator" id="add">+</button>
             <button class="operator" id="subtract">-</button>
             <button class="operator" id="multiply">x</button>
-            <button class="operator" id="divide">/</button>            
+            <button class="operator" id="divide">/</button>
+            <button class="operator" id="exponent">^</button>             
         </div>
         <div class="miscItems">
             <button class="misc" id="equals">=</button>
+            <button class="misc" id="back">BACKSPACE</button>
             <button class="misc" id="clear">CLEAR</button>
         </div>
         <div class="displayFrame">
